--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ body {
 }
 
 .page-header {
-    background: url(../img/header-page.jpg) top center no-repeat;
+    background: url(../img/header-page.webp) top center no-repeat;
     background-size: cover;
     text-shadow: 0 0 30px rgba(0, 0, 0, .1);
 }
